# sqlmini

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  LICENSE  README.md
cmake/: install-rules.cmake
include/: btree.h  compiler.h  cursor.h  dbvm.h  input.h  pager.h  serialize.h  table.h  types.h
spec/: main_spec.rb
src/: main.c
src/sqlmini/: compiler.c  cursor.c  dbvm.c  input.c  pager.c  serialize.c  table.c  types.c
